--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Soundslip</title>
-    <script type="module" crossorigin src="/assets/index.f62f14b8.js"></script>
-    <link rel="stylesheet" href="/assets/index.06dcebd8.css">
   </head>
   <body>
     <div id="root"></div>
-    
+    <script type="module" src="/src/main.jsx"></script>
     <script src="https://kit.fontawesome.com/2f00c46609.js" crossorigin="anonymous"></script>
   </body>
 </html>
